Fix bugs in event system.